# newsletter-manager

./: .env  .gitignore  Cargo.toml  Rocket.toml  diesel.toml
migrations/2025-07-20-160945_create_newsletters/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
